[package]
name = "replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features=["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
serde = { version = "1.0.138", features=["derive"] }
colored = "2.0.0"
toml_edit = { version = "0.14.4", features=["serde", "easy"] }
